# little-lemon

./: .gitignore  Dinmukhamet - Coursera Assignment.postman_collection.json  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  start.sh
config/: settings.py  urls.py
restaurant/: admin.py  models.py  serializers.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py
restaurant/tests/: factories.py  test_models.py  test_views.py
